apps/ops/wud/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wud
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
    app.kubernetes.io/name: wud
    app.kubernetes.io/part-of: wud
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
