apps/ops/wud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wud
  namespace: wud
  labels:
    app.kubernetes.io/name: wud
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: wud
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
